@@ -138,7 +138,7 @@ private:
   HttpSM * m_http_sm;
 
   Arena m_arena;
-  URL *m_url;
+  //  URL *m_url;
 
   HTTPHdr *m_client_request;
   HTTPHdr *m_proxy_response;
@@ -156,7 +156,7 @@ private:
   int m_client_req_unmapped_url_path_len;
   char *m_client_req_unmapped_url_host_str;
   int m_client_req_unmapped_url_host_len;
-  char *m_client_req_url_path_str;
+  char const*m_client_req_url_path_str;
   int m_client_req_url_path_len;
   char *m_proxy_resp_content_type_str;
   int m_proxy_resp_content_type_len;
